# distributed-task-queue-system

./: .env.example  .gitignore  .pre-commit-config.yaml  COMPLETE_REORGANIZATION_SUMMARY.md  CONTRIBUTING.md  DOCKER_REFERENCE.md  DOCKER_USAGE.md  Dockerfile.backend  Dockerfile.frontend  Makefile  ORGANIZATION_COMPLETE.md  PROJECT_STRUCTURE_ORGANIZED.md  README.md  RELEASE_NOTES.md  alembic.ini  create_demo_user.py  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  init_db.py  pyproject.toml  requirements-dev.txt  requirements.txt  reset_db.py  run.py  setup.bat  setup.sh  test_db_connection.py
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  docker.yml
deployment/docker/: Dockerfile.api  Dockerfile.worker  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.prod.yml
docs/: ABOUT.md  API.md  ARCHITECTURE.md  AUDIT_FINAL.txt  CHANGELOG.md  COMPLETE_PROJECT_GUIDE.md  CONTRIBUTING.md  DAY4_READINESS_CHECKLIST.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DOCS_RESTRUCTURING_SUMMARY.md  INDEX.md  MONITORING_GUIDE.md  NEW_CONTEXT_TEMPLATE.md  PERFORMANCE_BASELINE.md  PROJECT_STATUS_WEEK3.md  Project Structure.md  README.md  RUNBOOK.md  TESTING.md  TROUBLESHOOTING_AND_BEST_PRACTICES.md  WEEK3_COMPLETION.md  WEEK4_ROADMAP.md  WEEK5_QUICK_START.md  WEEK5_ROADMAP.md  WEEK7_COMPLETION.md  WEEK8_COMPLETION.md  📋 COMPLETE FEATURE LIST.md
docs/api/: API_REFERENCE.md  openapi.json
docs/architecture/: ARCHITECTURE.md  COMPONENT_ARCHITECTURE.md
docs/completion/: README.md  WEEK4_COMPLETION.md
docs/development/: CODE_STYLE.md  PROJECT_FILE_STRUCTURE.md
docs/roadmap/: ROADMAP_INDEX.md  week4_roadmap.html  week5_roadmap.html
docs/setup/: PROJECT_SETUP_SUMMARY.md  REQUIREMENTS_AND_SETUP.md
e2e/: .gitignore  package.json  playwright.config.ts
e2e/tests/: auth.spec.ts  campaigns.spec.ts  dashboard.spec.ts  global.setup.ts  navigation.spec.ts  tasks.spec.ts
examples/: worker_with_metrics.py
frontend/: README.md  index.html  jest.config.ts  package-lock.json  package.json  tailwind.config.js  test_output.txt  tsconfig.app.json  tsconfig.jest.json
frontend/coverage/: clover.xml  coverage-final.json  lcov.info
frontend/src/: App.tsx  index.css  setupTests.ts
monitoring/prometheus/: alert_rules.yml  prometheus.yml  recording_rules.yml
roadmaps/: MASTER_ROADMAP.html  THURSDAY_FRIDAY_ROADMAP.html  WEDNESDAY_ROADMAP.html  WEEK2_MON_TUE_ROADMAP.html  WEEK2_WED_FRI_ROADMAP.html  WEEKEND_ROADMAP.html  WEEK_1_ROADMAP.html  WEEK_2_COMPLETION_SUMMARY.md  WEEK_2_ROADMAP.html  WEEK_3_ROADMAP.html  WEEK_6_ROADMAP.html  WEEK_7_ROADMAP.html  WEEK_8_ROADMAP.html  week4-roadmap.html
scripts/: deploy.sh  init_env.py  init_migrations.py  security_audit.py  seed_data.py  setup_env.py  smoke_test.py  taskctl.py  validate_env.py  verify_status.py
scripts/database/: init_db.py  setup_db.py
scripts/setup/: setup_dev.py
src/: __init__.py
src/alerts/: __init__.py  engine.py
src/analytics/: __init__.py  trends.py
src/api/: __init__.py  main.py  middleware.py  schemas.py  security.py  test_app.py
tests/: conftest.py  test_health.py
(+255 files in other folders)
